<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="subtitle">Subtitle</string>
    <string name="price_range">Price Range</string>
    <string name="opened_now">Opened Now</string>
    <string name="cancelar">Cancelar</string>
    <string name="filtrar">Filtrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="radius_value">Raio: %1$d metros</string>
    <string name="title_filter">Aprimore sua busca!</string>
    <string name="subtitle_filter">Filtre os resultados de acordo com suas preferências.</string>
    <string name="look_what_are_talking_about_this_place">Look what are talking about this place!</string>
    <string name="open_now">Open Now</string>
    <string name="closed">Closed Now</string>
</resources>