<!-- res/layout/dialog_filter.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/dialogIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/dialogTitle"
                style="@style/H1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Title"
                app:layout_constraintTop_toBottomOf="@id/dialogIcon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/dialogSubtitle"
                style="@style/Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitle"
                app:layout_constraintTop_toBottomOf="@id/dialogTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <CheckBox
                android:id="@+id/priceRangeCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_range"
                style="@style/H4"
                app:layout_constraintTop_toBottomOf="@id/dialogSubtitle"
                app:layout_constraintStart_toStartOf="parent" />

            <CheckBox
                android:id="@+id/openedNowCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opened_now"
                style="@style/H4"
                app:layout_constraintTop_toBottomOf="@id/priceRangeCheckbox"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnCancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/dividerColor"
                android:padding="@dimen/margin_16"
                android:text="@string/cancelar"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toStartOf="@id/btnFilter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/openedNowCheckbox"
                app:layout_constraintWidth_default="wrap" />

            <Button
                android:id="@+id/btnFilter"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/filtrar"
                android:background="@drawable/bg_gradient_fuchsia"
                android:textColor="@android:color/white"
                android:padding="@dimen/margin_16"
                app:layout_constraintTop_toTopOf="@id/btnCancel"
                app:layout_constraintStart_toEndOf="@id/btnCancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_default="wrap"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
