<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".places.view.FilterDialogFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/dialogIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:src="@mipmap/ic_launcher"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dialogTitle"
                    style="@style/H1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Title"
                    app:layout_constraintEnd_toEndOf="@+id/dialogIcon"
                    app:layout_constraintStart_toStartOf="@+id/dialogIcon"
                    app:layout_constraintTop_toBottomOf="@id/dialogIcon" />

                <TextView
                    android:id="@+id/dialogSubtitle"
                    style="@style/Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/subtitle"
                    app:layout_constraintEnd_toEndOf="@+id/dialogTitle"
                    app:layout_constraintStart_toStartOf="@+id/dialogTitle"
                    app:layout_constraintTop_toBottomOf="@id/dialogTitle" />

                <CheckBox
                    android:id="@+id/priceRangeCheckbox"
                    style="@style/H4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/price_range"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dialogSubtitle" />

                <CheckBox
                    android:id="@+id/openedNowCheckbox"
                    style="@style/H4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/opened_now"
                    app:layout_constraintEnd_toEndOf="@+id/priceRangeCheckbox"
                    app:layout_constraintStart_toStartOf="@+id/priceRangeCheckbox"
                    app:layout_constraintTop_toBottomOf="@id/priceRangeCheckbox" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:padding="@dimen/margin_16"
                    android:text="@string/cancelar"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/openedNowCheckbox"
                    app:layout_constraintStart_toStartOf="@+id/openedNowCheckbox"
                    app:layout_constraintTop_toBottomOf="@id/openedNowCheckbox" />

<!--                <Button-->
<!--                    android:id="@+id/btnCancel"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="16dp"-->
<!--                    android:layout_marginBottom="16dp"-->
<!--                    android:padding="@dimen/margin_16"-->
<!--                    android:text="@string/cancelar"-->
<!--                    android:textColor="@android:color/black"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintEnd_toStartOf="@id/btnFilter"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@id/openedNowCheckbox" />-->

<!--&lt;!&ndash;                <Button&ndash;&gt;-->
<!--&lt;!&ndash;                    android:id="@+id/btnCancel"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:layout_width="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:text="Test"/>&ndash;&gt;-->

<!--                <Button-->
<!--                    android:id="@+id/btnFilter"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:padding="@dimen/margin_16"-->
<!--                    android:text="@string/filtrar"-->
<!--                    android:textColor="@android:color/black"-->
<!--                    app:layout_constraintBottom_toBottomOf="@+id/btnCancel"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintStart_toEndOf="@id/btnCancel"-->
<!--                    app:layout_constraintTop_toTopOf="@id/btnCancel" />-->
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>